[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://PlayerActions.tscn" type="PackedScene" id=3]
[ext_resource path="res://BoardContainer.gd" type="Script" id=4]

[sub_resource type="OpenSimplexNoise" id=1]
seed = 4
octaves = 6
period = 37.8
persistence = 0.87
lacunarity = 0.3

[sub_resource type="NoiseTexture" id=2]
noise = SubResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1026.0
margin_bottom = 608.0
rect_min_size = Vector2( 0, 600 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1026.0
margin_bottom = 64.0

[node name="MenuContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 64.0
rect_min_size = Vector2( 120, 64 )
rect_clip_content = true

[node name="Menu" parent="VBoxContainer/HBoxContainer/MenuContainer" instance=ExtResource( 2 )]
margin_right = 120.0

[node name="ActionsContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 282.0
margin_bottom = 64.0
rect_min_size = Vector2( 158, 50 )

[node name="PlayerActions" parent="VBoxContainer/HBoxContainer/ActionsContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 0.0
margin_bottom = 64.0

[node name="BoardContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 1026.0
margin_bottom = 668.0
rect_min_size = Vector2( 0, 486 )
script = ExtResource( 4 )

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/BoardContainer"]
margin_right = 1026.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 600 )
texture = SubResource( 2 )
[connection signal="gui_input" from="VBoxContainer/BoardContainer" to="." method="_on_BoardContainer_gui_input"]
